[package]
name = "actix-csrf"
version = "0.8.0"
authors = ["Edward Shen <code@eddie.sh>", "Benoit Eudier <benoit.eudier@gmail.com>"]
edition = "2021"
rust-version = "1.72.0"
description = "CSRF middleware for Actix"
repository = "https://github.com/edward-shen/actix-csrf"
license = "MIT OR Apache-2.0"
keywords = ["actix", "middleware", "csrf"]
categories = ["web-programming::http-server"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
actix-web = { version = "4.3.1", default-features = false, features = [ "cookies" ] }
base64 = { version = "0.21.0", default-features = false, features = [ "std" ]}
cookie = "0.16"
rand = { version = "0.8", features = [ "std_rng" ] }
tracing = "0.1"
serde = { version = "1", default-features = false }

[dev-dependencies]
# These versions are pinned to ensure compatibility with 4.0.0
anyhow = "1"
actix-web = { version = "=4.3.1", features = [ "cookies", "openssl"] }
actix-http = "=3.3.1"
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
openssl = { version = "0.10" }

[profile.release]
lto = true
codegen-units = 1
