[package]
name = "actix-csrf"
version = "0.8.0"
authors = ["Edward Shen <code@eddie.sh>", "Benoit Eudier <benoit.eudier@gmail.com>"]
edition = "2021"
rust-version = "1.72.0"
description = "CSRF middleware for Actix"
repository = "https://github.com/edward-shen/actix-csrf"
license = "MIT OR Apache-2.0"
keywords = ["actix", "middleware", "csrf"]
categories = ["web-programming::http-server"]
include = ["src/**/*", "LICENSE-*", "README.md"]

# Make sure docs.rs creates docs using all features
[package.metadata.docs.rs]
all-features = true

[features]
actix-multipart = ["dep:actix-multipart", "dep:parse-size"]

[dependencies]
actix-web = { version = "4.3.1", default-features = false, features = [ "cookies" ] }
base64 = { version = "0.21.0", default-features = false, features = [ "std" ]}
cookie = "0.16"
rand = { version = "0.8", features = [ "std_rng" ] }
tracing = "0.1"
serde = { version = "1", default-features = false }
actix-multipart = { version = "0.7.2" , optional = true }
# Needs pinning cuz MSRV for versions > 1.1.0 is rust 1.82
parse-size = { version = "=1.0.0", optional = true }

[dev-dependencies]
anyhow = "1"
actix-web = { version = "=4.3.1", features = [ "cookies", "openssl"] }
actix-http = "=3.3.1"
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
openssl = { version = "0.10" }
mime = "0.3.17"

[profile.release]
lto = true
codegen-units = 1

[[example]]
name = "file_upload_form"
required-features = ["actix-multipart"]
